# IncompleteCooperative

./: .bumpversion.cfg  .gitignore  README.md  asdf  game.py  main.py  makefile  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-package.yml
incomplete_cooperative/: __init__.py  __main__.py  bounds.py  coalition_ids.py  coalitions.py  evaluation.py  exploitability.py  feature_extractors.py  functoolz.py  game.py  game_loader.py  game_properties.py  gameplay.py  generators.py  graph_game.py  gym.py  icg_gym.py  icg_gym_linear.py  main.py  max_xos_approximation.py  meta_game.py  multiplicative  multiplicative.py  multiplicative_factor.py  normalize.py  norms.py  per_action_policy_net.py  protocols.py  random_player.py  regret.py  rla_approximation.py  shapley.py  supermodularity_check.py
incomplete_cooperative/multiplicative/: __init__.py  max_xos_approximation.py  multiplicative_factor.py  rla_approximation.py
incomplete_cooperative/run/: __init__.py  best_states.py  eval.py  greedy.py  learn.py  model.py  save.py  solve.py
incomplete_cooperative/solvers/: __init__.py  greedy.py  largest_coalition.py  max_xos.py  random.py  rla.py
incomplete_cooperative/tests/: test_bounds.py  test_coalition_ids.py  test_coalitions.py  test_exploitability.py  test_file.npy  test_game.py  test_game_properties.py  test_gameplay.py  test_generators.py  test_graph_game.py  test_gym.py  test_icg_gym_linear.py  test_main.py  test_meta_game.py  test_multiplicative.py  test_normalize.py  test_norms.py  test_per_action_policy_net.py  test_random_player.py  test_regret.py  test_run.py  test_run_best_states.py  test_run_learn.py  test_run_save.py  test_shapley.py  test_solvers.py  utils.py
latex_templates/: cumulative_coalitions.tex  cumulative_exploitability.tex
performance/: bounds_cache_nocache.py  run_optimal.py
scripts/: __init__.py  combined_chosen_coalition_size.py  combined_cumulative_chosen_coalitions.py  compare_multiplicative.py  convex_generator_generates_convex.py  exploitability_combiner.py  exploitability_combiner_multiple.py  factory_divergence_check.py  find_data_jsons.py  graph_last_exploitabilities.py  latex_chosen_coalitions.py  latex_cumulative_exploitability.py  plot_base.py  shap_example_to_set_functions.py  supermodular_divergence_sample_check.py  test_sam_bounds.py  test_xos_sam.py  validator.py  validator_best_is_best.py
