[metadata]
name = incomplete_cooperative
version = 2.0.2
author = Filip Úradník
author_email = filip.uradnik9@gmail.com
description = Agent for learning about incomplete cooperative games.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = incomplete cooperative game theory machine learning

[options]
package_dir =
    = .
packages = find:
python_requires = ~=3.10
zip_safe = False
install_requires =
    numpy ~= 1.25
    stable-baselines3 ~= 2.0
    sb3-contrib ~= 2.0
    gymnasium ~= 0.28

[options.packages.find]
where = .

[options.extras_require]
dev =
    flake8
    pytest
    mypy
    coverage
    bumpversion

[options.entry_points]
console_scripts =
    incomplete_cooperative = incomplete_cooperative.__main__:run_main
    icg_exploitability_combiner = scripts.exploitability_combiner:main
    icg_validator = scripts.validator:main
    icg_validator_best_is_best = scripts.validator_best_is_best:main
