[metadata]
name = incomplete_cooperative
version = 3.13.0
author = Filip Úradník
author_email = filip.uradnik9@gmail.com
description = Agent for learning about incomplete cooperative games.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = incomplete cooperative game theory machine learning

[options]
package_dir =
    = .
packages = find:
python_requires = ~=3.10
zip_safe = False
install_requires =
    numpy ~= 1.25
    stable-baselines3 ~= 2.0
    sb3-contrib ~= 2.0
    gymnasium ~= 0.28
    networkx ~= 3.2
    scipy ~= 1.11
    typing-extensions ~= 4.7 ; python_version < "3.11"
    pyfmtools @ git+https://github.com/furadnik/fmtools-fix

[options.packages.find]
where = .

[options.extras_require]
dev =
    flake8
    pytest
    bandit
    pydocstyle
    mypy
    coverage
    bumpversion

[options.entry_points]
console_scripts =
    incomplete_cooperative = incomplete_cooperative.__main__:run_main
    icg_exploitability_combiner = scripts.exploitability_combiner:main
    icg_cumulative_coalition_combiner = scripts.combined_cumulative_chosen_coalitions:main
    icg_cumulative_size_combiner = scripts.combined_chosen_coalition_size:main
    icg_last_exploitabilities = scripts.graph_last_exploitabilities:main
    icg_validator = scripts.validator:main
    icg_validator_best_is_best = scripts.validator_best_is_best:main

[pydocstyle]
convention = google
add_select = D204,D400,D401
add_ignore = D105,D106,D107,D101
